style.css
* {
  margin: 0;
  padding: 0;
}

#paginationDiv li {
  list-style: none;
  cursor: pointer;
  display: flex;
  margin: 0 1vh 0 1vh;
  padding: 0.5vh;
}
h4 {
  color: white;
}

body {
  color: white !important;
}

input,
input:focus {
  padding: 0.5rem;
  color: black;
  border: 2px solid white;
}

body {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 1rem;
}
#search {
  margin-top: 5rem;
}
#main {
  width: 125vh;
  height: 90vh;
  border: 2px dotted white;
  padding: 1rem;
  position: relative;
  overflow: hidden;
}
#image img {
  border-radius: 50%;
  height: 10rem;
  width: 10rem;
}
#image {
  display: flex;
  flex-direction: column;
  text-align: start;
}

a {
  text-decoration: none !important;
  color: white !important;
}
#bio {
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}
#details {
  text-align: start;
  gap: 2px;
}
#allrepo {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 1rem;
  flex-wrap: wrap;
}

#langs {
  height: 2rem;
  width: 4rem;
  color: white;
  display: flex;
}
#repo {
  position: relative;
  padding: 10px;
  border: 1px solid white;
  height: 10vh;
  width: 50vh;
  overflow: hidden;
}

